<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <ImageView
        android:id="@+id/errorImage"
        android:layout_width="600dp"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/no_internet_image"
        android:src="@drawable/empty_cart" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/errorImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/your_cart_is_empty"
            android:textColor="@color/colorBlack"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/errorText"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/looks_like_you_haven_t_added_anything_to_your_cart_yet"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />


</RelativeLayout>