<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="product"
            type="com.example.shop_kotlin.models.Product" />

        <variable
            name="cartService"
            type="com.example.shop_kotlin.cart.service.CartService" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@{product.imageURL}"
            android:contentDescription="@string/image" />

        <RelativeLayout
            android:layout_width="316dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:padding="10dp">

            <TextView
                android:id="@+id/productTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@{product.title}"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="120dp"
                android:layout_height="18dp"
                android:layout_below="@id/productTitle"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/stars"
                android:src="@drawable/rating_orange_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/productImage"
                android:layout_marginTop="5dp"
                android:text="@string/only_fresh_products"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <Button
                android:layout_width="75dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="40dp"
                android:background="@drawable/buttonshape"
                android:onClick="@{(view) -> cartService.addToProductCart(view, product)}"
                android:text="@{product.itemPrice1 + ` mdl`}"
                android:textColor="@color/colorWhite"
                android:textSize="11sp"
                android:textStyle="bold"
                tools:ignore="SmallSp" />


        </RelativeLayout>

    </LinearLayout>
</layout>