<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".promotion.PromotionItemActivity">

    <data>

        <variable
            name="promotionModel"
            type="com.example.shopkotlin.promotion.model.Promotion" />

        <variable
            name="cartService"
            type="com.example.shopkotlin.cart.service.CartService" />
    </data>



    <LinearLayout
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back_icon"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/promotion_item"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/promotion_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/promotion_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="30dp"
                android:text="@{promotionModel.title}"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/colorBlack"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300sp"
                android:layout_below="@id/promotion_name"
                android:background="@{promotionModel.image}"
                android:contentDescription="@string/image_for_promotion" />
        </RelativeLayout>

        <TextView
            android:id="@+id/promotion_food_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@{promotionModel.foodType}"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/promotion_body"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="80dp"
            android:text="@{promotionModel.body}"
            android:textColor="@color/colorBlack" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/buttonshape"
            android:drawableStart="@drawable/ic_baseline_shopping_cart_24"
            android:drawablePadding="5dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:onClick="@{(view) -> cartService.addToPromotionsCart(view, promotionModel)}"
            android:text="@{String.valueOf(promotionModel.price) + ` MDL`}"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />


    </LinearLayout>
</layout>