<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="com.example.shop_kotlin.models.Product" />

        <variable
            name="cartService"
            type="com.example.shop_kotlin.cart.service.CartService" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheetProductContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:contentDescription="@string/close_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/productImage"
            android:layout_width="250dp"
            android:layout_height="220dp"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:background="@{product.imageURL}"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <TextView
            android:id="@+id/isVegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/regular"
            android:text="@{product.isVegetarian()}"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productImage"
            tools:text="Vegetarian Food" />

        <TextView
            android:id="@+id/productTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/semibold"
            android:text="@{product.title}"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/isVegetarian"
            app:layout_constraintTop_toBottomOf="@+id/isVegetarian"
            tools:text="Chicken burger" />

        <TextView
            android:id="@+id/productGram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/semibold"
            android:text="@{String.valueOf(product.weight) + `g`}"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/ingredientRelativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="200g" />


        <LinearLayout
            android:id="@+id/ingredientRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productTitle">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredientRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:lineSpacingExtra="2dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintHorizontal_bias="2"
                app:spanCount="2" />

        </LinearLayout>


        <ImageView
            android:id="@+id/decreaseQuantity"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/decrease_quantity_icon"
            android:onClick="@{() -> cartService.decreaseProductQuantity(product)}"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredientRelativeLayout"
            app:srcCompat="@drawable/ic_group_400" />

        <TextView
            android:id="@+id/quantityField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/semibold"
            android:text="@{String.valueOf(product.quantity)}"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/decreaseQuantity"
            app:layout_constraintStart_toEndOf="@+id/decreaseQuantity"
            app:layout_constraintTop_toTopOf="@+id/decreaseQuantity"
            tools:text="0" />

        <ImageView
            android:id="@+id/increaseQuantity"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/increase_quantity"
            android:onClick="@{() -> cartService.increaseProductQuantity(product)}"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="@+id/quantityField"
            app:layout_constraintStart_toEndOf="@+id/quantityField"
            app:layout_constraintTop_toTopOf="@+id/quantityField"
            app:srcCompat="@drawable/ic_group_401" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/semibold"
            android:text="@{String.valueOf(product.itemPrice1) + ` mdl`}"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/increaseQuantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/increaseQuantity"
            tools:text="25 MDL" />

        <Button
            android:id="@+id/addToCart"
            android:layout_width="220dp"
            android:layout_margin="10dp"
            android:layout_height="65dp"
            android:elevation="80dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/buttonshape"
            android:contentDescription="@string/add_to_cart"
            android:onClick="@{() -> cartService.bottomSheetAddToProductCart(product)}"
            android:text="@string/add_to_cart"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantityField"
            app:layout_constraintVertical_bias="0.273" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>